--- a/package.json
+++ b/package.json
@@ -1,15 +1,26 @@
 {
   "name": "gamma-lite",
-  "private": true,
   "version": "0.1.0",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev -p 3000",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 3000"
+    "start": "next start"
   },
   "dependencies": {
     "next": "14.2.15",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+
+    "openai": "^4.55.0",
+    "reveal.js": "^5.1.0",
+    "pdf-parse": "^1.1.1",
+    "mammoth": "^1.7.1"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.17",
+    "postcss": "^8.4.47",
+    "autoprefixer": "^10.4.20"
   }
 }
