--- a/package.json
+++ b/package.json
@@ -2,24 +2,30 @@
   "name": "gamma-lite",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p 3000",
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "14.2.15",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "openai": "^4.55.0",
-    "reveal.js": "^5.1.0",
-    "pdf-parse": "^1.1.1",
-    "mammoth": "^1.7.1"
+    "classnames": "2.5.1"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.17",
-    "postcss": "^8.4.47",
-    "autoprefixer": "^10.4.20"
+    "typescript": "5.4.5",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "@types/node": "20.11.30",
+    "autoprefixer": "10.4.19",
+    "postcss": "8.4.35",
+    "tailwindcss": "3.4.3",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.15"
+  },
+  "engines": {
+    "node": ">=18.17.0"
   }
 }
