--- a/package.json
+++ b/package.json
@@ -9,21 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "2.5.1",
+    "mammoth": "1.6.0",
     "next": "14.2.15",
+    "openai": "4.58.0",
+    "pdf-parse": "1.1.1",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "classnames": "2.5.1"
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "typescript": "5.4.5",
+    "@types/node": "20.11.30",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "@types/node": "20.11.30",
     "autoprefixer": "10.4.19",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.15",
     "postcss": "8.4.35",
     "tailwindcss": "3.4.3",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.15"
+    "typescript": "5.4.5"
   },
   "engines": {
     "node": ">=18.17.0"
