--- a/package.json
+++ b/package.json
@@ -3,30 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3000",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 3000",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "classnames": "2.5.1",
-    "mammoth": "1.6.0",
     "next": "14.2.15",
-    "openai": "4.58.0",
-    "pdf-parse": "1.1.1",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "openai": "^4.69.0",
+    "pdf-parse": "^1.1.1",
+    "mammoth": "^1.7.1"
   },
   "devDependencies": {
-    "@types/node": "20.11.30",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0",
-    "autoprefixer": "10.4.19",
-    "eslint": "8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.15",
-    "postcss": "8.4.35",
-    "tailwindcss": "3.4.3",
-    "typescript": "5.4.5"
+    "typescript": "^5.6.3",
+    "@types/react": "^18.3.12"
   },
   "engines": {
     "node": ">=18.17.0"
