--- a/package.json
+++ b/package.json
@@ -10,19 +10,29 @@
   },
   "dependencies": {
     "next": "14.2.15",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "openai": "^4.69.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+
+    "openai": "^4.56.0",
     "pdf-parse": "^1.1.1",
-    "mammoth": "^1.7.1"
+    "mammoth": "^1.6.0",
+
+    "classnames": "^2.5.1"
   },
   "devDependencies": {
-    "eslint": "^8.57.1",
-    "eslint-config-next": "14.2.15",
     "typescript": "^5.6.3",
-    "@types/react": "^18.3.12"
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.74",
+    "@types/react-dom": "^18.2.24",
+
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.15",
+
+    "tailwindcss": "^3.4.12",
+    "postcss": "^8.4.47",
+    "autoprefixer": "^10.4.20"
   },
   "engines": {
-    "node": ">=18.17.0"
+    "node": "18.x"
   }
 }
